<resources>
    <string name="app_name">LifeByME</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Not a member? Sign up now.</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_activity_homemade">LoginActivityHomemade</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
    </string>

    <!-- Stings related to create user -->
    <string name="terms">I have read and accept the <u>terms and conditions</u>.</string>

    <string name="about_us">Copyright © 2016 LifeByME Group \n\nLifeByME started out as a project to track patterns and habits in the day-to-day life of ordinary people. This resulted in the LifeByMe app where tracking is made easy and correlations accurate.
Please note that correlation is not the same thing as causation, i e having two parameters that follow similar patterns does not necessarily mean that these two parameters affect each other. The LifeByME app will only show mathematical correlation and does not take into account whether parameters are otherwise related or not.
LifeByME will not sell any personal information to third parties. </string>


    <string name="skip_day">Skip day</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">(click to share)</string>
    <string name="unshare">(click to unshare)</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="submit">Submit</string>
    <string name="add_variable">Add new</string>
    <string name="step_detector">
         android.hardware.sensor.stepdetector
    </string>
    <string-array name="values">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>
        <item>item 6</item>
        <item>item 7</item>
        <item>item 8</item>
        <item>item 9</item>
        <item>item 10</item>
        <item>item 11</item>
        <item>item 12</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
