<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/bakgrund"
    tools:context="com.gnirt69.LifeByME.LoginActivity"
    android:weightSum="1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_marginTop="100sp"
        android:visibility="gone"
        android:layout_gravity="center" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/imageView4"
                android:src="@drawable/finaltextlogga"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:id="@+id/imageView5"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/social2"/>

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:layout_weight="0.7"
                    android:maxLines="1"
                    android:imeActionId="@+id/new_password"
                    android:singleLine="true"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:id="@+id/imageView6"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/lock"/>

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginLeft="15dp"
                    android:textSize="20dp" />

            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/mybutton"
                android:textColor="#157065"
                android:textSize="20dp" />

            <Button
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@string/action_forgot_password"
                android:id="@+id/forgot_password"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textColor="#ffffff"
                android:background="@android:color/transparent"
                android:onClick="onButtonClick"
                android:textSize="15dp" />

            <Button
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:id="@+id/sign_up_button"
                android:textStyle="bold"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textColor="#fdfdfd"
                android:background="@android:color/transparent"
                android:onClick="onButtonClick"
                android:textSize="15dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
